# robot_deploy

./: .gitignore  CMakeLists.txt  HARDWARE_NOTES.md  IGH绑定网卡.md  README.md
.cache/clangd/index/: ControlTypes.hpp.08E5E878FE07E6E9.idx  EthercatAdapter.hpp.B82C96D02DE05FE2.idx  EthercatAdapterIGH.cpp.3E827ACC1A8E862E.idx  EthercatAdapterIGH.hpp.860BF01379AA7FDE.idx  ID_test.cpp.2CA4C56B8A7FCF13.idx  MotorTypes.hpp.85C41C4004B88569.idx  ThreadSafeQueue.hpp.8133F22EDD2CC7E9.idx  debug_tool.cpp.D9727A0312EC161C.idx  imu_parser.h.7FC34B6FB2453E01.idx  imu_reader.cpp.2A69AC0B493BD71C.idx  main.c.1A14DE96C19213DB.idx  motor_control.cpp.9921FB3DBFE06F57.idx  motor_control.hpp.58460A214814FAD3.idx  simple_test.cpp.A4F95CCB4F10C4E5.idx  test_CiA402.cpp.EE7CFD4E5E164C57.idx
.codex/: .env
examples/: ID_test.cpp  debug_tool.cpp  simple_test.cpp  test_CiA402.cpp
include/: data_types.h  imu_parser.h  imu_parser.hpp  serial_port.h  serial_port.hpp
include/myactua/: ControlTypes.hpp  MotorTypes.hpp  ThreadSafeQueue.hpp  motor_control.hpp
src/: EthercatAdapterIGH.cpp  imu_parser.cpp  imu_reader.cpp  main.cpp  motor_control.cpp  serial_port.c
src/imu/a100/: CMakeLists.txt  README.md
src/imu/a100/.cache/clangd/index/: a100_test.cpp.121C77DB2938D328.idx  data_types.h.D8800390618C4368.idx  imu_parser.c.16BFC152EBD7B33A.idx  imu_parser.cpp.24F578F8A3E1261F.idx  imu_parser.cpp.F3F8FBD8BB573BEF.idx  imu_parser.hpp.587C48755B40EE2F.idx  imu_parser.hpp.65F2CB0C0A64FEEA.idx  imu_reader.cpp.AFA9B6E26CED740C.idx  imu_reader.hpp.74AC3CDA869C9A4D.idx  imu_reader.hpp.7C32751FEA7BE17D.idx  main.cpp.390A2A6A8494AA8E.idx  serial_port.c.08F82C49B94EC012.idx  serial_port.cpp.369115A741D666CC.idx  serial_port.cpp.7DE1EFE80A3E0395.idx  serial_port.hpp.783990BF79032561.idx  serial_port.hpp.F6DF23A32D74BA10.idx  types.hpp.13144DB58B3BC293.idx  types.hpp.F0FB6233A90DEBAE.idx
src/imu/a100/examples/: a100_test.cpp  main.cpp
src/imu/a100/include/: imu_parser.hpp  imu_reader.hpp  types.hpp
src/imu/a100/src/drivers/: imu_reader.cpp  serial_port.cpp
src/imu/a100/src/protocol/frame/: imu_parser.cpp
src/imu/a100_imu/: CMakeLists.txt  README.md
src/imu/a100_imu/.cache/clangd/index/: serial_port.h.26EBB2DBBAFF8E9D.idx
src/imu/a100_imu/include/: imu_reader.hpp
src/imu/a100_imu/src/: main.c
src/inference/: CMakeLists.txt
src/inference/.cache/clangd/index/: imu_test.cpp.9C99B26E46FA608F.idx  motors_test.cpp.AD104C10B5650ED2.idx  robot_interface.cpp.28305DBBFD0502C6.idx  robot_interface.hpp.6FBCF499B1265025.idx
src/inference/examples/: basic_stand_test.cpp  imu_test.cpp  motors_test.cpp  policy_test.cpp
src/inference/include/: robot_interface.hpp  torch_policy_runner.hpp
src/inference/model/: policy.pt  policy_v3.pt
src/inference/src/: robot_interface.cpp  torch_policy_runner.cpp
src/motors/: CMakeLists.txt  README.md
src/motors/.cache/clangd/index/: EthercatAdapter.hpp.700C49138580C26C.idx  EthercatAdapterIGH.cpp.E5416872C575B3CF.idx  EthercatAdapterIGH.hpp.26CBB64C40716EC3.idx  ID_test.cpp.65B53396E4FD23D8.idx  ThreadSafeQueue.hpp.ABECCD26743A13B6.idx  debug_tool.cpp.4236FD8BF7B24887.idx  motor_control.cpp.6906E77EBBFBDC00.idx  motor_control.hpp.170846540E8CADFE.idx  simple_test.cpp.913646426B2E289C.idx
src/motors/datasheet/myact/: 脉塔电机控制-ethercat.md
src/motors/docs/: ethercat_op_debug_interview.md  ethercat_op_debug_report.md
src/motors/examples/: ID_test.cpp  MIT_test.cpp  Makefile  debug_tool.cpp  linear_test.cpp  mit_pos_test.cpp  raw_pos_test.cpp  simple_test.cpp  squat_stand.cpp  stop_read_status.cpp
src/motors/include/: ControlTypes.hpp  MotorTypes.hpp
src/motors/src/drivers/myact/: motor_control.cpp  motor_control.hpp
src/motors/src/protocol/ethercat/: EthercatAdapter.hpp  EthercatAdapterIGH.cpp  EthercatAdapterIGH.hpp
